# internal/api/controllers/journey_controller.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"net/http"
 	"strconv"
+	"vivu/internal/models/request_models"
 	"vivu/internal/services"
 	"vivu/pkg/utils"
 )
@@ -83,4 +84,55 @@ func (j *JourneyController) GetDetailsInfoOfJourneyById(c *gin.Context) {
 	}
 
 	utils.RespondSuccess(c, journey, "Journey details fetched successfully")
+}
+
+// AddPoiToJourney godoc
+// @Summary Add POI to journey
+// @Description Add a point of interest (POI) to a specific journey with optional start and end times
+// @Tags Journey
+// @Accept json
+// @Produce json
+// @Param request body request_models.AddPoiToJourneyRequest true "Journey ID, POI ID, Start Time, End Time"
+// @Success 200 {object} utils.APIResponse
+// @Router /journeys/add-poi-to-journey [post]
+func (j *JourneyController) AddPoiToJourney(c *gin.Context) {
+
+	var req request_models.AddPoiToJourneyRequest
+	if err := c.ShouldBindJSON(&req); err != nil || req.JourneyID == "" || req.PoiID == "" {
+		utils.RespondError(c, http.StatusBadRequest, "JourneyID and PoiID are required")
+		return
+	}
+
+	err := j.journeyService.AddPoiToJourneyWithGivenStartAndEndDate(c.Request.Context(), req.JourneyID, req.PoiID, req.StartTime, *req.EndTime)
+	if err != nil {
+		utils.HandleServiceError(c, err)
+		return
+	}
+
+	utils.RespondSuccess(c, nil, "POI added to journey successfully")
+}
+
+// RemovePoiFromJourney godoc
+// @Summary Remove POI from journey
+// @Description Remove a point of interest (POI) from a specific journey
+// @Tags Journey
+// @Accept json
+// @Produce json
+// @Param request body request_models.RemovePoiFromJourneyRequest true "Journey ID, POI ID"
+// @Success 200 {object} utils.APIResponse
+// @Router /journeys/remove-poi-from-journey [post]
+func (j *JourneyController) RemovePoiFromJourney(c *gin.Context) {
+	var req request_models.RemovePoiFromJourneyRequest
+	if err := c.ShouldBindJSON(&req); err != nil || req.JourneyID == "" || req.PoiID == "" {
+		utils.RespondError(c, http.StatusBadRequest, "JourneyID and PoiID are required")
+		return
+	}
+
+	err := j.journeyService.RemovePoiFromJourney(c.Request.Context(), req.JourneyID, req.PoiID)
+	if err != nil {
+		utils.HandleServiceError(c, err)
+		return
+	}
+
+	utils.RespondSuccess(c, nil, "POI removed from journey successfully")
 }
